hive md changes